--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MeghTree Technologies Bootstrap Template</title>
+  <title>MeghTree Technologies</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -54,23 +54,6 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -1022,7 +1005,7 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Email us</span>
-                  <span class="detail-value">comp@dbdd.in</span>
+                  <span class="detail-value">sales@meghtree.co.in</span>
                 </div>
               </div>
 
@@ -1152,7 +1135,7 @@
           <p>Bangalore 560033</p>
           <p>India</p>
           <p class="mt-4"><strong>Phone:</strong> <span>+918867494386</span></p>
-          <p><strong>Email:</strong> <span>comp@dbdd.in</span></p>
+          <p><strong>Email:</strong> <span>sales@meghtree.co.in</span></p>
         </div>
 
       </div>
