--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <p data-aos="fade-up" data-aos-delay="300">Your trusted <b style="color:#0078D7;">Azure</b> Cloud Partner in <b>Bangalore</b>, delivering seamless migration, strong security, and cost-efficient optimization through <b>tailored cloud solutions</b> that empower businesses to scale and innovate.</p>
               <div class="hero-cta" data-aos="fade-up" data-aos-delay="400">
                 <a href="#about" class="btn-primary">Get Started Today</a>
-                <a href="#https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn-secondary glightbox">
+                <a href="" class="btn-secondary glightbox">
                   <i class="bi bi-play-circle"></i>
                   Watch Demo
                 </a>
