--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,7 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Email us</span>
+                  <span class="detail-value">info@meghtree.co.in</span>
                   <span class="detail-value">sales@meghtree.co.in</span>
                 </div>
               </div>
@@ -1015,7 +1016,7 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Call us</span>
-                  <span class="detail-value">+918867494386</span>
+                  <span class="detail-value">+919980471559</span>
                 </div>
               </div>
 
@@ -1025,7 +1026,10 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Visit us</span>
-                  <span class="detail-value"> 123 Tech Park, Indiranagar, Bangalore, India</span>
+                  <span class="detail-value"> MeghTree Technologies</span>
+                  <span class="detail-value"> Property No.224 , 3rd Floor , Ranka Junction 80/3</span>
+                  <span class="detail-value"> Vijinapur Village, Old Madras Road, KR Puram Hobli</span>
+                  <span class="detail-value"> Bengaluru(KSN) 560016, Karnataka</span>
                 </div>
               </div>
 
@@ -1131,10 +1135,12 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p> 123 Tech Park,Indiranagar, </p>
-          <p>Bangalore 560033</p>
-          <p>India</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+918867494386</span></p>
+          <p> MeghTree Technologies </p>
+          <p>Property No.224 , 3rd Floor , Ranka Junction 80/3</p>
+          <p>Vijinapur Village, Old Madras Road, KR Puram Hobli</p>
+          <p>Bengaluru(KSN) 560016, Karnataka</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+919980471559</span></p>
+          <p><strong>Email:</strong> <span>info@meghtree.co.in</span></p>
           <p><strong>Email:</strong> <span>sales@meghtree.co.in</span></p>
         </div>
 
